Expand gitignore to symlinks and output files

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,12 @@
 .venv/
 __pycache__/
 datasets/
+datasets
+output/
+output
+
 experiment_data/
 .ipynb_checkpoints/
+notebook_reports/
+
+pmotif_detection/*.batch
