--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pmotif_lib"
-version = "0.1.0"
+version = "0.1.3"
 authors = [
   { name="Tim Garrels", email="tim.garrels@protonmail.com" },
 ]
@@ -15,6 +15,12 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+]
+dependencies = [
+    "networkx==3.1",
+    "tqdm==4.65.0",
+    "pandas==2.0.0",
+    "scipy==1.10.1",
 ]
 
 [project.urls]
